--- a/WebTour/src/main/resources/templates/User/detailTour.html
+++ b/WebTour/src/main/resources/templates/User/detailTour.html
@@ -65,20 +65,22 @@
 					<!-- Hiển thị hình ảnh chính (hình lớn) -->
 					<img id="main-image" th:if="${images.size() > 0}" th:alt="${images[0].imageCode}"
 						height="400" th:src="@{'/image/' + ${images[0].imageId}}"
-						width="800" /> 
+						 /> 
 						
-						<img th:if="${images.size() == 0}"
-						src="path/to/default-image.jpg" height="400" width="800"
-						alt="Hình ảnh mặc định" />
-
 					<!-- Hiển thị các hình thu nhỏ -->
-					<div class="image-thumbnails">
-						<th:block th:each="image : ${images}">
-							<img class="sub-image" th:alt="${image.imageCode}" height="100"
-								th:src="@{'/image/' + ${image.imageId}}" width="200" />
-						</th:block>
+					<div class="thumbnail-container">
+						<button class="arrow left-arrow" onclick="scrollThumbnails(-1)">&#8249;</button>
+						<div class="image-thumbnails">
+							<th:block th:each="image : ${images}">
+								<img class="sub-image" th:alt="${image.imageCode}" height="100"
+									th:src="@{'/image/' + ${image.imageId}}" width="200" />
+							</th:block>
+						</div>
+						<button class="arrow right-arrow" onclick="scrollThumbnails(1)">&#8250;</button>
 					</div>
+					
 				</div>
+				
 				<div class="booking-info">
 					<h2 th:text="${tour.price}">1.000.000₫</h2>
 					<!-- <p class="original-price">2.000.000₫</p> -->
