fix page tour du lịch
add chức năng sắp xếp giá tour tăng giảm ở trang  tour du lịch

--- a/WebTour/src/main/resources/templates/User/detailTour.html
+++ b/WebTour/src/main/resources/templates/User/detailTour.html
@@ -76,7 +76,9 @@
 									th:src="@{'/image/' + ${image.imageId}}" width="200" />
 							</th:block>
 						</div>
-						<button class="arrow right-arrow" onclick="scrollThumbnails(1)">&#8250;</button>
+						<button class="arrow right-arrow" onclick="scrollThumbnails(1)">
+    <i class="fas fa-chevron-right"></i>
+</button>
 					</div>
 					
 				</div>
