--- a/WebTour/src/main/resources/static/css/detailTour.css
+++ b/WebTour/src/main/resources/static/css/detailTour.css
@@ -114,32 +114,30 @@ body {
 
 .arrow {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: #C8A8E9;
-    color: white; 
-    border: none; 
-    border-radius: 50%; 
-    padding: 15px; 
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
     cursor: pointer;
-    z-index: 1; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Tạo bóng đổ nhẹ cho nút */
-    transition: all 0.3s ease; /* Hiệu ứng mượt khi hover */
+    z-index: 1;
 }
 
 /* Nút mũi tên khi hover */
 .arrow:hover {
     background-color: #50e0eb; 
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4); /* Tăng độ bóng khi hover */
-    transform: translateY(-50%) scale(1.1); /* Tăng kích thước khi hover */
 }
 
 .left-arrow {
-    left: 10px; 
+    left: 0px; 
+    border-top-left-radius: 10px; 
+    border-bottom-left-radius: 10px;
 }
 
 .right-arrow {
-    right: 10px; 
+    right: 0px; 
+    border-top-right-radius: 5px; 
+    border-bottom-right-radius: 5px;
 }
 
 /* ================================================================================= */
