--- a/WebTour/src/main/resources/templates/components/sidebarAdmin.html
+++ b/WebTour/src/main/resources/templates/components/sidebarAdmin.html
@@ -85,6 +85,11 @@
 	<li><a th:href="@{/admin/tours-management}"> <i
 			class="fas fa-plane"> </i> Tours
 	</a></li>
+	
+	<li><a th:href="@{/admin/employee-management}"> <i
+			class="fas fa-user"> </i> Employee
+	</a></li>
+	
 	<li><a href="/"> <i class="fa-solid fa-right-from-bracket"></i>
 			Logout
 	</a></li>
