--- a/WebTour/src/main/resources/templates/Admin/customer_management.html
+++ b/WebTour/src/main/resources/templates/Admin/customer_management.html
@@ -6,6 +6,7 @@
 <title>Quản lý khách hàng</title>
 <link rel="stylesheet" href="/css/home_admin.css">
 <link rel="stylesheet" href="/css/base.css">
+<link rel="stylesheet" href="/css/pagination.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -26,7 +27,7 @@
 				<button id="filter-customer-desc">Tăng</button>
 				<button id="filter-customer-asc">Giảm</button>
 			</div>
-			<table>
+			<table class="mb-50">
 				<thead>
 					<tr>
 						<th>#</th>
@@ -46,6 +47,46 @@
 					</tr>
 				</tbody>
 			</table>
+
+			<div class="pagination-container">
+				<ul class="pagination" id="pagination">
+					<!-- Prev Icon -->
+					<li th:if="${currentPage > 0}"><a
+						th:href="@{/admin/customer-management(page=${currentPage - 1}, size=4)}">
+							<i class="fas fa-chevron-left icon"></i>
+					</a></li>
+
+					<!-- First Page -->
+					<li><a th:href="@{/admin/customer-management(page=0, size=4)}"
+						th:class="${currentPage == 0} ? 'active' : ''">1</a></li>
+
+					<!-- Dots before current range -->
+					<li th:if="${currentPage > 2}"><span>...</span></li>
+
+					<!-- Middle Pages -->
+					<li
+						th:each="i : ${#numbers.sequence(currentPage - 1, currentPage + 1)}"
+						th:if="${i > 0 and i < totalPages - 1}"><a
+						th:href="@{/admin/customer-management(page=${i}, size=4)}"
+						th:class="${currentPage == i} ? 'active' : ''" th:text="${i + 1}">
+					</a></li>
+
+					<!-- Dots after current range -->
+					<li th:if="${currentPage < totalPages - 3}"><span>...</span></li>
+
+					<!-- Last Page -->
+					<li th:if="${totalPages > 1}"><a
+						th:href="@{/admin/customer-management(page=${totalPages - 1}, size=4)}"
+						th:class="${currentPage == totalPages - 1} ? 'active' : ''"
+						th:text="${totalPages}"> </a></li>
+
+					<!-- Next Icon -->
+					<li th:if="${currentPage + 1 < totalPages}"><a
+						th:href="@{/admin/customer-management(page=${currentPage + 1}, size=4)}">
+							<i class="fas fa-chevron-right icon"></i>
+					</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<script src="../js/headerAdmin.js"></script>
