--- a/WebTour/src/main/resources/templates/Admin/promotion_program.html
+++ b/WebTour/src/main/resources/templates/Admin/promotion_program.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="/css/modal.css">
 <link rel="stylesheet" href="/css/base.css">
 <link rel="stylesheet" href="/css/promotion_program.css">
+<link rel="stylesheet" href="/css/pagination.css">
 <link
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
 	rel="stylesheet" />
@@ -40,7 +41,7 @@
 				</div>
 				<button id="filter-promotion-byDate">Lọc</button>
 			</div>
-			<table class="table">
+			<table class="table mb-50">
 				<thead>
 					<tr>
 						<th class="small-column">Chương trình khuyến mãi</th>
@@ -60,6 +61,46 @@
 
 
 			</table>
+			<div class="pagination-container">
+				<ul class="pagination" id="pagination">
+					<!-- Prev Icon -->
+					<li th:if="${currentPage > 0}"><a
+						th:href="@{/admin/promotion-management(page=${currentPage - 1}, size=2)}">
+							<i class="fas fa-chevron-left icon"></i>
+					</a></li>
+
+					<!-- First Page -->
+					<li><a
+						th:href="@{/admin/promotion-management(page=0, size=2)}"
+						th:class="${currentPage == 0} ? 'active' : ''">1</a></li>
+
+					<!-- Dots before current range -->
+					<li th:if="${currentPage > 2}"><span>...</span></li>
+
+					<!-- Middle Pages -->
+					<li
+						th:each="i : ${#numbers.sequence(currentPage - 1, currentPage + 1)}"
+						th:if="${i > 0 and i < totalPages - 1}"><a
+						th:href="@{/admin/promotion-management(page=${i}, size=2)}"
+						th:class="${currentPage == i} ? 'active' : ''" th:text="${i + 1}">
+					</a></li>
+
+					<!-- Dots after current range -->
+					<li th:if="${currentPage < totalPages - 3}"><span>...</span></li>
+
+					<!-- Last Page -->
+					<li th:if="${totalPages > 1}"><a
+						th:href="@{/admin/promotion-management(page=${totalPages - 1}, size=2)}"
+						th:class="${currentPage == totalPages - 1} ? 'active' : ''"
+						th:text="${totalPages}"> </a></li>
+
+					<!-- Next Icon -->
+					<li th:if="${currentPage + 1 < totalPages}"><a
+						th:href="@{/admin/promotion-management(page=${currentPage + 1}, size=2)}">
+							<i class="fas fa-chevron-right icon"></i>
+					</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
@@ -93,8 +134,8 @@
 										value="percent" id="promotion-by-percent"> Theo phần
 										trăm
 									</label> <label> <input type="radio" name="promotion"
-										value="money" id="promotion-by-money" checked> Theo
-										số tiền
+										value="money" id="promotion-by-money" checked> Theo số
+										tiền
 									</label>
 								</div>
 							</div>
