--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -137,7 +137,8 @@
 				</div>
 				<!-- nút thanh toán (dùng paypal) -->
 				<div class="actions">
-					<button  id="bt-pay" class="order-button">Thanh toán</button>
+					<button  id="bt-pay" class="order-button">Thanh toán Paypal</button>
+					<button onclick="paymentMoMo()" id="payment-momo" >Thanh toán MoMo</button>
 				</div>
 				
 				<!-- paypal -->
