--- a/WebTour/src/main/resources/templates/User/refund.html
+++ b/WebTour/src/main/resources/templates/User/refund.html
@@ -75,10 +75,10 @@
 		</div>
 		<div class="order-actions">
 			<button class="btn-continue" id="button-refund">
-				<i class="fa-regular fa-credit-card"></i> Trả tiền cho bố
+				<i class="fa-regular fa-credit-card"></i> Hoàn tiền
 			</button>
 			<button class="btn-back">
-				<i class="fa-solid fa-circle-left"></i> Hôi đổi ý gòi
+				<i class="fa-solid fa-circle-left"></i> Quay lại
 			</button>
 		</div>
 	</div>
