--- a/WebTour/src/main/resources/templates/components/header.html
+++ b/WebTour/src/main/resources/templates/components/header.html
@@ -77,7 +77,10 @@ nav ul li a:hover {
 	min-width: 200px;
 	z-index: 1;
 }
-
+.nagigate-bar-header{
+    width: 100%;
+    border: solid;
+}
 .dropdown-content a {
 	display: block;
 	padding: 10px 20px;
@@ -117,6 +120,7 @@ nav ul li a:hover i {
 .column a:hover {
 	color: #00aaff;
 }
+
 
 /* Màn hình lớn (Desktop) */
 @media ( min-width : 992px) {
@@ -458,6 +462,9 @@ nav ul li a {
 .user-submenu a:hover {
 	background-color: #ddd;
 }
+
+
+
 </style>
 <div class="container">
 	<div class="container">
@@ -494,4 +501,10 @@ nav ul li a {
 			</span>
 		</div>
 	</div>
+	<!-- <div class="navigate-bar-header">
+		<div class="navigate">
+	        <a href="/home"></a> ; 
+	        <a id="current-page"></a>
+    	</div>
+	</div> -->
 </div>
