commit 16th continute
update file

--- a/WebTour/src/main/resources/templates/Admin/editSchedule.html
+++ b/WebTour/src/main/resources/templates/Admin/editSchedule.html
@@ -13,7 +13,7 @@
 <body>
 <header id="header"></header>
 	<div class="edit-container">
-		<h2>Edit Schedule</h2>
+		<h2>Schedule Management</h2>
 		<p>
 			<strong>ID tour:</strong> <span id="tourId"
 				th:attr="data-id=${tour.tourId}" th:text="${tour.tourId}">Tour
