--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -10,8 +10,18 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="stylesheet" href="/css/home_user.css">
+<link rel="stylesheet" href="/css/loading.css">
 </head>
 <body>
+<div class="loading-container" id="loading-content">
+        <div class="center-icon">
+            <img src="eiffel-tower-icon.svg" alt="Eiffel Tower">
+        </div>
+        <div class="orbit">
+            <div class="plane plane-blue"></div>
+            <div class="plane plane-yellow"></div>
+        </div>
+    </div>
 <header id="header"></header>
 	<div class="container-content">
 		<div class="left">
