--- a/WebTour/src/main/resources/templates/components/header.html
+++ b/WebTour/src/main/resources/templates/components/header.html
@@ -469,7 +469,7 @@ nav ul li a {
 <div class="container">
 	<div class="container">
 		<div class="logo">
-			<a href="home.html"><img src="/imagess/background_light_v1.jpg"
+			<a href="/home"><img src="/imagess/background_light_v1.jpg"
 				alt="ND Travel Logo"></a>
 		</div>
 		<nav>
