--- a/WebTour/src/main/resources/templates/components/headerEmployee.html
+++ b/WebTour/src/main/resources/templates/components/headerEmployee.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="container">
             <div class="logo">
-                <a href="home.html"><img src="/imagess/Logo.png" alt="ND Travel Logo"></a>
+                <a href="/employee"><img src="/imagess/background_light_v1.jpg"
+				alt="ND Travel Logo"></a>
             </div>
             <nav>
                 <ul>
