--- a/WebTour/src/main/resources/templates/Admin/tours_management.html
+++ b/WebTour/src/main/resources/templates/Admin/tours_management.html
@@ -296,7 +296,25 @@
 		<div id="updateImagePreviewContainer"></div>
 
         
-        
+        <h3>Schedules</h3>
+		<table id="schedule-table" class="table">
+			<thead>
+				<tr>
+					<th>Step</th>
+					<th>Activity</th>
+					<th>Location</th>
+					<th>Action</th>
+					<th>Delete</th>
+				</tr>
+			</thead>
+			<tbody>
+				
+			</tbody>
+		</table>
+		<div class="btn-function">
+			<button type="button" class="btn-insert-schedule" >Tạo lịch trình</button>
+	
+		</div>
 
         <button type="button" class="btn-save-all" onclick="updateTour()">Lưu</button>
     </form>
