--- a/WebTour/src/main/resources/templates/User/detailTour.html
+++ b/WebTour/src/main/resources/templates/User/detailTour.html
@@ -84,7 +84,7 @@
 				</div>
 				
 				<div class="booking-info">
-					<h2 th:text="${tour.price}">1.000.000₫</h2>
+					<h2 class="price-tour" th:text="${tour.price}">1.000.000₫</h2>
 					<!-- <p class="original-price">2.000.000₫</p> -->
 					<div class="code-tour">
 						<p>Mã tour:</p>
