--- a/WebTour/src/main/resources/templates/User/notificationSuccess.html
+++ b/WebTour/src/main/resources/templates/User/notificationSuccess.html
@@ -97,7 +97,7 @@
 			<div class="total">
 				<div class="sub-total">
 					<b> Tổng tiền: </b> 
-					<b th:text="${bookingNotification.totalPrice}">0đ </b>
+					<b class="price-tour" th:text="${bookingNotification.totalPrice}">0đ </b>
 				</div>
 				<div class="sub-total">
 					<b>Chiết khấu:</b>
@@ -118,7 +118,7 @@
 				</div>
 				<div class="sub-total">
 					<b> Thành tiền: </b> 
-					<b th:text="${paymentNotification.amount}">0đ </b>
+					<b class="price-tour" th:text="${paymentNotification.amount}">0đ </b>
 				</div>
 			</div>
 		</div>
