--- a/WebTour/src/main/resources/templates/User/order.html
+++ b/WebTour/src/main/resources/templates/User/order.html
@@ -86,7 +86,7 @@
 						<!--  Loại vé -->
 						<td class="table-td" th:text="${booking[9]}"></td>
 						<!-- Khởi hành -->
-						<td class="table-td" th:text="${booking[7]}"></td>
+						<td class="table-td price-tour" th:text="${booking[7]}"></td>
 						<!-- Thành tiền -->
 						<td class="table-td">
 							<!-- Thanh toán --> <span th:if="${booking[2] == 1}">Cash</span>
