--- a/WebTour/src/main/resources/templates/User/payment.html
+++ b/WebTour/src/main/resources/templates/User/payment.html
@@ -132,17 +132,17 @@
 				</div>
 				<div class="item">
 					<p>Tạm tính</p>
-					<p id="temp-price">10.500.000đ</p>
+					<p class="price-tour" id="temp-price">10.500.000đ</p>
 				</div>
 
 				<div class="total">
 					<span>Tổng cộng</span> 
-					<span id="total-price" class="total-amount">0₫</span>
+					<span id="total-price" class="total-amount price-tour">0₫</span>
 					
 				</div>
 				<div class="total-conversion">
 					<div>Quy đổi</div>
-					<div id="conversion-value" class="amount">0₫</div>
+					<div id="conversion-value" class="amount price-tour">0₫</div>
 					
 				</div>
 				<!-- nút thanh toán (dùng paypal) -->
