--- a/WebTour/src/main/resources/templates/User/detailTour.html
+++ b/WebTour/src/main/resources/templates/User/detailTour.html
@@ -228,13 +228,14 @@
 				</div>
 			</div>
 		</div>
-		<div id="overlay-loading" class="overlay-loading">
+		<!-- <div id="overlay-loading" class="overlay-loading">
    			<h1>Đang load</h1>
-		</div>
+		</div> -->
 		
 	</div>
 	<div id="footer"></div>
 	<script src="/js/header.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 	<script src="../js/detailTour.js"></script>
 	
 </body>
